Adds title image and colors

--- a/index.html
+++ b/index.html
@@ -7,18 +7,34 @@
   <title>mjm</title>
   <link rel="stylesheet" href="main.css">
   <link rel="icon" href="http://i.imgur.com/U49GhQ2.png">
+  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+
 </head>
 <body>
   <nav>
-    <div class="burger">
+    <div class="masthead">
+      testing
     </div>
     <div class="options">
     </div>
   </nav>
   <section>
     <div class="page intro">
+      <div class="logo container">
+        <div class="icon">
+        </div>
+        <div class="name">
+          <p class="firstname">MICHAEL</p>
+          <p class="lastname">MELTON</p>
+        </div>
+        <div class="title">
+          <p class="title-text">/WEB DEVELOPER</p>
+        </div>
+      </div>
     </div>
     <div class="page pictionary">
+      Testing
     </div>
     <div class="page chat">
     </div>
