Adds positioning of containers

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </nav>
   <section>
     <div class="page intro">
-      <div class="logo container">
+      <div class="logo">
         <div class="icon">
         </div>
         <div class="name">
@@ -34,13 +34,40 @@
       </div>
     </div>
     <div class="page pictionary">
-      Testing
+      <div class="container">
+        <div class="img"></div>
+        <div class="description">
+          <p class="proj-title">pictionary</p>
+          <p>Lorem ipsum vasd asd asd asdvc</p>
+        </div>
+      </div>
     </div>
     <div class="page chat">
+      <div class="container">
+        <div class="img"></div>
+        <div class="description">
+          <p class="proj-title">TheChat!</p>
+          <p>Lorem ipsum vasd asd asd asdvc</p>
+      </div>
+      </div>
     </div>
     <div class="page apihack">
+      <div class="container">
+        <div class="img"></div>
+        <div class="description">
+          <p class="proj-title">API hack</p>
+          <p>Lorem ipsum vasd asd asd asdvc</p>
+      </div>
+      </div>
     </div>
     <div class="page learning">
+      <div class="container">
+        <div class="img"></div>
+        <div class="description">
+          <p class="proj-title">Currently learning...</p>
+          <p>React.js/Redux</p>
+      </div>
+      </div>
     </div>
   </section>
   <footer>
