Adds content positioning for 320x480

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" href="http://i.imgur.com/U49GhQ2.png">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+  <<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 
 </head>
 <body>
@@ -37,35 +38,35 @@
       <div class="container">
         <div class="img"></div>
         <div class="description">
-          <p class="proj-title">pictionary</p>
-          <p>Lorem ipsum vasd asd asd asdvc</p>
+          <p class="proj-title pic-title">pictionary</p>
+          <p class="pic">A drawing game for multiple clients, built with Node.js and Socket.io</p>
         </div>
       </div>
     </div>
     <div class="page chat">
       <div class="container">
         <div class="img"></div>
-        <div class="description">
-          <p class="proj-title">TheChat!</p>
-          <p>Lorem ipsum vasd asd asd asdvc</p>
+        <div class="description d2">
+          <p class="proj-title chat-title">TheChat!</p>
+          <p class="chat-words">Simple chatroom built with Node.js and Socket.io</p>
       </div>
       </div>
     </div>
     <div class="page apihack">
       <div class="container">
         <div class="img"></div>
-        <div class="description">
-          <p class="proj-title">API hack</p>
-          <p>Lorem ipsum vasd asd asd asdvc</p>
+        <div class="description d3">
+          <p class="proj-title api-title">APIhack</p>
+          <p class="api">Interface for searching the Library of Congress photo API via AJAX calls</p>
       </div>
       </div>
     </div>
     <div class="page learning">
       <div class="container">
         <div class="img"></div>
-        <div class="description">
-          <p class="proj-title">Currently learning...</p>
-          <p>React.js/Redux</p>
+        <div class="description d4">
+          <p class="proj-title learn-title">Currently learning...</p>
+          <p class="learn">React.js/Redux</p>
       </div>
       </div>
     </div>
