Adds nav bar face

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="main.css">
   <link rel="icon" href="http://i.imgur.com/U49GhQ2.png">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-  <<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 </head>
 <body>
   <nav>
     <div class="masthead">
-      testing
+      <div class="top contact">CONTACT</div>
+      <div class="top projects">PROJECTS</div>
     </div>
     <div class="options">
     </div>
