Adds drop-downs (before animation)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
       <div class="top contact">CONTACT</div>
       <div class="top projects">PROJECTS</div>
     </div>
-    <div class="options">
+    <div class="list social">
+      <div class="items sites"><a href="" target="_blank"><img src="">email</a></div>
+      <div class="items sites"><a href="" target="_blank"><img src="">github</a></div>
+      <div class="items sites"><a href="" target="_blank"><img src="">twitter</a></div>
+      <div class="items sites"><a href="" target="_blank"><img src="">linkedin</a></div>
+    </div>
+    <div class="list work">
+      <div class="items sites pic-title"><a href="" target="_blank"><img src="">pictionary</a></div>
+      <div class="items sites"><a href="" target="_blank"><img src="">TheChat!</a></div>
+      <div class="items sites"><a href="" target="_blank"><img src="">LOCpics</a></div>
+      <div class="items sites"><a href="" target="_blank"><img src="">learning</a></div>
     </div>
   </nav>
   <section>
@@ -30,7 +40,7 @@
           <p class="lastname">MELTON</p>
         </div>
         <div class="title">
-          <p class="title-text">/WEB DEVELOPER</p>
+          <p class="title-text">/ WEB DEVELOPER</p>
         </div>
       </div>
     </div>
