--- a/index.html
+++ b/index.html
@@ -10,31 +10,24 @@
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="index.js"></script>
 </head>
 <body>
   <nav>
     <div class="masthead">
-      <div class="top contact">CONTACT</div>
-      <div class="top projects">PROJECTS</div>
-    </div>
-    <div class="list social">
-      <div class="items sites"><a href="" target="_blank"><img src="">email</a></div>
-      <div class="items sites"><a href="" target="_blank"><img src="">github</a></div>
-      <div class="items sites"><a href="" target="_blank"><img src="">twitter</a></div>
-      <div class="items sites"><a href="" target="_blank"><img src="">linkedin</a></div>
-    </div>
-    <div class="list work">
-      <div class="items sites pic-title"><a href="" target="_blank"><img src="">pictionary</a></div>
-      <div class="items sites"><a href="" target="_blank"><img src="">TheChat!</a></div>
-      <div class="items sites"><a href="" target="_blank"><img src="">LOCpics</a></div>
-      <div class="items sites"><a href="" target="_blank"><img src="">learning</a></div>
+      <div class="top burger"><i class="fa fa-bars" aria-hidden="true"></i></div>
+      <div class="top sites">
+        <a href="https://github.com/elmeltone" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
+        <a href="https://twitter.com/elmeltone" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
+        <a href="https://www.linkedin.com/in/elmeltone" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>
+        <a href="mailto:meltonm83@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i>
+      </div>
     </div>
   </nav>
   <section>
     <div class="page intro">
       <div class="logo">
-        <div class="icon">
-        </div>
         <div class="name">
           <p class="firstname">MICHAEL</p>
           <p class="lastname">MELTON</p>
@@ -43,6 +36,7 @@
           <p class="title-text">/ WEB DEVELOPER</p>
         </div>
       </div>
+      <div class="proj-transition">- projects -</div>
     </div>
     <div class="page pictionary">
       <div class="container">
