Adds new styles and shopping list

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
   <nav>
     <div class="masthead">
-      <div class="top burger"><i class="fa fa-bars" aria-hidden="true"></i></div>
+      <div class="top burger"><a><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div>
       <div class="top sites">
         <a href="https://github.com/elmeltone" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
         <a href="https://twitter.com/elmeltone" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
         <a href="https://www.linkedin.com/in/elmeltone" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>
-        <a href="mailto:meltonm83@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i>
+        <a href="mailto:meltonm83@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
       </div>
     </div>
   </nav>
@@ -36,11 +36,15 @@
           <p class="title-text">/ WEB DEVELOPER</p>
         </div>
       </div>
-      <div class="proj-transition">- projects -</div>
+      <div class="proj-transition"><i class="fa fa-chevron-down" aria-hidden="true"></i></div>
     </div>
     <div class="page pictionary">
       <div class="container">
-        <div class="img"></div>
+        <div class="img">
+          <div class="screen" id="pictionary-screen"></div>
+          <div class="code" id="pictionary-code"></div>
+        </div>
+        <br>
         <div class="description">
           <p class="proj-title pic-title">pictionary</p>
           <p class="pic">A drawing game for multiple clients, built with Node.js and Socket.io</p>
@@ -49,7 +53,11 @@
     </div>
     <div class="page chat">
       <div class="container">
-        <div class="img"></div>
+        <div class="img">
+          <div class="screen" id="chat-screen"></div>
+          <div class="code" id="chat-code"></div>
+        </div>
+        <br>
         <div class="description d2">
           <p class="proj-title chat-title">TheChat!</p>
           <p class="chat-words">Simple chatroom built with Node.js and Socket.io</p>
@@ -58,17 +66,35 @@
     </div>
     <div class="page apihack">
       <div class="container">
-        <div class="img"></div>
+        <div class="img">
+          <div class="screen" id="locpics-screen"></div>
+          <div class="code" id="locpics-code"></div>
+        </div>
+        <br>
         <div class="description d3">
-          <p class="proj-title api-title">APIhack</p>
+          <p class="proj-title api-title">LOC Pics</p>
           <p class="api">Interface for searching the Library of Congress photo API via AJAX calls</p>
       </div>
       </div>
     </div>
+    <div class="page shoppinglist">
+      <div class="container">
+        <div class="img">
+          <div class="screen" id="shop-screen"></div>
+          <div class="code" id="shop-code"></div>
+        </div>
+        <br>
+        <div class="description d4">
+          <p class="proj-title shop-title">Shopping List</p>
+          <p class="shop">Shopping list with persistence via Mongoose</p>
+      </div>
     <div class="page learning">
       <div class="container">
-        <div class="img"></div>
-        <div class="description d4">
+        <div class="img">
+          <div class="screen" id="react-screen"></div>
+        </div>
+        <br>
+        <div class="description d5">
           <p class="proj-title learn-title">Currently learning...</p>
           <p class="learn">React.js/Redux</p>
       </div>
