Changes screenshots from backgrounds to img tags

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>mjm</title>
   <link rel="stylesheet" href="main.css">
-  <link rel="icon" href="http://i.imgur.com/U49GhQ2.png">
+  <link rel="icon" href="http://i.imgur.com/ZMp4wUe.png">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
@@ -41,13 +41,12 @@
     <div class="page pictionary">
       <div class="container">
         <div class="img">
-          <div class="screen" id="pictionary-screen"></div>
-          <div class="code" id="pictionary-code"></div>
+          <img class="screen" id="pictionary-screen" src="http://i.imgur.com/zX0b8U8.png" alt="pictionary">
+          <img class="code" id="pictionary-code" src="http://i.imgur.com/Nbm8jJE.png" alt="pictionary">
         </div>
         <br>
         <div class="description">
-          <p class="proj-title pic-title">pictionary</p>
-          <p class="pic">A drawing game for multiple clients, built with Node.js and Socket.io</p>
+          <p class="text">Drawing game for multiple clients, built with Node.js and Socket.io</p>
         </div>
       </div>
     </div>
@@ -59,8 +58,7 @@
         </div>
         <br>
         <div class="description d2">
-          <p class="proj-title chat-title">TheChat!</p>
-          <p class="chat-words">Simple chatroom built with Node.js and Socket.io</p>
+          <p class="text">Simple chatroom built with Node.js and Socket.io</p>
       </div>
       </div>
     </div>
@@ -72,8 +70,7 @@
         </div>
         <br>
         <div class="description d3">
-          <p class="proj-title api-title">LOC Pics</p>
-          <p class="api">Interface for searching the Library of Congress photo API via AJAX calls</p>
+          <p class="text">Interface for searching the Library of Congress photo API via AJAX calls</p>
       </div>
       </div>
     </div>
@@ -85,8 +82,7 @@
         </div>
         <br>
         <div class="description d4">
-          <p class="proj-title shop-title">Shopping List</p>
-          <p class="shop">Shopping list with persistence via Mongoose</p>
+          <p class="text">Shopping list with persistence via Mongoose</p>
       </div>
     <div class="page learning">
       <div class="container">
@@ -95,8 +91,8 @@
         </div>
         <br>
         <div class="description d5">
-          <p class="proj-title learn-title">Currently learning...</p>
-          <p class="learn">React.js/Redux</p>
+          <p class="learn">Currently learning: React.js/Redux</p>
+          <p class="learn">Check my progress <a class="activity" href="https://github.com/elmeltone?tab=activity">here</a>.</p>
       </div>
       </div>
     </div>
