Changes remaining screenshots to img tags

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div class="page pictionary">
       <div class="container">
         <div class="img">
-          <img class="screen" id="pictionary-screen" src="http://i.imgur.com/zX0b8U8.png" alt="pictionary">
-          <img class="code" id="pictionary-code" src="http://i.imgur.com/Nbm8jJE.png" alt="pictionary">
+          <a href="https://mjm-pictionary.herokuapp.com/" target="_blank"><img class="screen" id="pictionary-screen" src="http://i.imgur.com/zX0b8U8.png" alt="pictionary"></a>
+          <a href="https://github.com/elmeltone/pictionary" target="_blank"><img class="code" id="pictionary-code" src="http://i.imgur.com/Nbm8jJE.png" alt="pictionary"></a>
         </div>
         <br>
         <div class="description">
@@ -53,8 +53,8 @@
     <div class="page chat">
       <div class="container">
         <div class="img">
-          <div class="screen" id="chat-screen"></div>
-          <div class="code" id="chat-code"></div>
+          <a href="https://mjm-thechat.herokuapp.com/" target="_blank"><img class="screen" id="chat-screen" src="http://i.imgur.com/9RxoEsT.png" alt="TheChat!"></a>
+          <a href="https://github.com/elmeltone/chatroom" target="_blank"><img class="code" id="chat-code" src="http://i.imgur.com/RSVmp9O.png" alt="TheChat!"></a>
         </div>
         <br>
         <div class="description d2">
@@ -65,8 +65,8 @@
     <div class="page apihack">
       <div class="container">
         <div class="img">
-          <div class="screen" id="locpics-screen"></div>
-          <div class="code" id="locpics-code"></div>
+          <a href="http://mjm-locpics.herokuapp.com/" target="_blank"><img class="screen" id="api-screen" src="http://i.imgur.com/xtqsYuv.png" alt="LOC Pics"></a>
+          <a href="https://github.com/elmeltone/apihack-v2" target="_blank"><img class="code" id="api-code" src="http://i.imgur.com/U0uCT3u.png" alt="LOC Pics"></a>
         </div>
         <br>
         <div class="description d3">
@@ -77,23 +77,25 @@
     <div class="page shoppinglist">
       <div class="container">
         <div class="img">
-          <div class="screen" id="shop-screen"></div>
-          <div class="code" id="shop-code"></div>
+          <a href="http://mjm-shoppinglist1.herokuapp.com/" target="_blank"><img class="screen" id="shop-screen" src="http://i.imgur.com/7sqplVg.png" alt="Shopping List"></a>
+          <a href="https://github.com/elmeltone/mongo-shopping-list" target="_blank"><img class="code" id="shop-code" src="http://i.imgur.com/22lociX.png" alt="Shopping List"></a>
         </div>
         <br>
         <div class="description d4">
           <p class="text">Shopping list with persistence via Mongoose</p>
+        </div>
       </div>
+    </div>
     <div class="page learning">
       <div class="container">
         <div class="img">
-          <div class="screen" id="react-screen"></div>
+          <img id="react-screen" src="http://i.imgur.com/1lQFt1f.png" alt="React">
         </div>
         <br>
         <div class="description d5">
           <p class="learn">Currently learning: React.js/Redux</p>
-          <p class="learn">Check my progress <a class="activity" href="https://github.com/elmeltone?tab=activity">here</a>.</p>
-      </div>
+          <p class="learn">Check my progress <a class="activity" href="https://github.com/elmeltone?tab=activity" target="_blank">here</a>.</p>
+        </div>
       </div>
     </div>
   </section>
