--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <br>
         <div class="description d2">
           <p class="text">Simple chatroom built with Node.js and Socket.io</p>
+          <p class="text">(My mom chose the color palette)</p>
       </div>
       </div>
     </div>
@@ -83,6 +84,7 @@
         <br>
         <div class="description d4">
           <p class="text">Shopping list with persistence via Mongoose</p>
+          <p class="text">(This is my actual shopping list. Feel free to add and delete items, but please return it to the way it was when you found it <i class="fa fa-smile-o"></i>)</p>
         </div>
       </div>
     </div>
@@ -94,7 +96,7 @@
         <br>
         <div class="description d5">
           <p class="learn">Currently learning: React.js/Redux</p>
-          <p class="learn">Check my progress <a class="activity" href="https://github.com/elmeltone?tab=activity" target="_blank">here</a>.</p>
+          <p class="learn">Check my progress <a id="activity" href="https://github.com/elmeltone?tab=activity" target="_blank">here</a>.</p>
         </div>
       </div>
     </div>
