--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <p class="title-text">/ WEB DEVELOPER</p>
         </div>
       </div>
+      <p class="text" id="hello">A (mostly) front end developer using  a mobile-first approach and the simplest functional design with Sass and the MERN stack.</p>
       <div class="proj-transition"><i class="fa fa-chevron-down" aria-hidden="true"></i></div>
     </div>
     <div class="page pictionary">
@@ -84,7 +85,7 @@
         <br>
         <div class="description d4">
           <p class="text">Shopping list with persistence via Mongoose</p>
-          <p class="text">(This is my actual shopping list. Feel free to add and delete items, but please return it to the way it was when you found it <i class="fa fa-smile-o"></i>)</p>
+          <p class="text">(This is my actual shopping list. Feel free to add and delete items, but please return it to the way it was when you found it <i class="fa fa-smile-o" id="smile"></i>)</p>
         </div>
       </div>
     </div>
