--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>mjm</title>
+  <title>mm</title>
   <link rel="stylesheet" href="main.css">
-  <link rel="icon" href="http://i.imgur.com/ZMp4wUe.png">
+  <link rel="icon" href="http://i.imgur.com/skmp04n.png">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
