--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <nav>
     <div class="masthead">
-      <div class="top burger"><a><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div>
+      <div class="top burger"><a><i id="arrow" class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div>
       <div class="top sites">
         <a href="https://github.com/elmeltone" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
         <a href="https://twitter.com/elmeltone" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
@@ -36,10 +36,11 @@
           <p class="title-text">/ WEB DEVELOPER</p>
         </div>
       </div>
-      <p class="text" id="hello">A (mostly) front end developer using  a mobile-first approach and the simplest functional design with Sass and the MERN stack.</p>
+      <p class="text" id="hello">A MERN stack web developer using  a mobile-first approach and the simplest functional design.</p>
       <div class="proj-transition"><i class="fa fa-chevron-down" aria-hidden="true"></i></div>
     </div>
     <div class="page pictionary">
+      <p id="projects-intro" class="text">- some recent projects -</p>
       <div class="container">
         <div class="img">
           <a href="https://mjm-pictionary.herokuapp.com/" target="_blank"><img class="screen" id="pictionary-screen" src="http://i.imgur.com/zX0b8U8.png" alt="pictionary"></a>
@@ -96,7 +97,7 @@
         </div>
         <br>
         <div class="description d5">
-          <p class="learn">Currently learning: React.js/Redux</p>
+          <p class="learn">Currently mastering: React.js/Redux</p>
           <p class="learn">Check my progress <a id="activity" href="https://github.com/elmeltone?tab=activity" target="_blank">here</a>.</p>
         </div>
       </div>
