Reverts server to bare minimum

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <br>
         <div class="description d4">
           <p class="text">Shopping list with persistence via Mongoose</p>
-          <p class="text">(This is my actual shopping list. Feel free to add and delete items, but please return it to the way it was when you found it <i class="fa fa-smile-o" id="smile"></i>)</p>
+          <p class="text">(This is my actual shopping list. Feel free to add and delete items, but please return it to the way it was when you found it! <i class="fa fa-smile-o" id="smile"></i>)</p>
         </div>
       </div>
     </div>
