Rearranges temporary styling

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
           <p class="title-text">/ WEB DEVELOPER</p>
         </div>
       </div>
-      <p class="text" id="hello">A MERN stack web developer using  a mobile-first approach and the simplest functional design.</p>
+      <p class="text" id="hello">Full Stack JavaScript</p>
+      <p class="text stack">MongoDB | Express | React | Node.js</p>
       <div class="proj-transition"><i class="fa fa-chevron-down" aria-hidden="true"></i></div>
     </div>
     <div class="page pictionary">
-      <p id="projects-intro" class="text">- some recent projects -</p>
       <div class="container">
         <div class="img">
           <a href="https://mjm-pictionary.herokuapp.com/" target="_blank"><img class="screen" id="pictionary-screen" src="http://i.imgur.com/zX0b8U8.png" alt="pictionary"></a>
