--- a/index.html
+++ b/index.html
@@ -4,107 +4,45 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>mm</title>
+  <title>Michael J Melton - Full Stack JavaScript Web Development Portfolio</title>
   <link rel="stylesheet" href="main.css">
-  <link rel="icon" href="http://i.imgur.com/skmp04n.png">
-  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="index.js"></script>
 </head>
 <body>
   <nav>
-    <div class="masthead">
-      <div class="top burger"><a><i id="arrow" class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div>
-      <div class="top sites">
-        <a href="https://github.com/elmeltone" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
-        <a href="https://twitter.com/elmeltone" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
-        <a href="https://www.linkedin.com/in/elmeltone" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>
-        <a href="mailto:meltonm83@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-      </div>
+    <div class="masthead wrapper">
+      <h3 class="title"><span class="name">michael j melton</span> / web developer</h3>
+      <div class="top options collaborate">Collaborate</div>
+      <div class="top options quote">Get a Quote</div>
+      <div class="top options explore">Explore</div>
     </div>
   </nav>
   <section>
-    <div class="page intro">
-      <div class="logo">
-        <div class="name">
-          <p class="firstname">MICHAEL</p>
-          <p class="lastname">MELTON</p>
-        </div>
-        <div class="title">
-          <p class="title-text">/ WEB DEVELOPER</p>
-        </div>
-      </div>
-      <p class="text" id="hello">Full Stack JavaScript</p>
-      <p class="text stack">MongoDB | Express | React | Node.js</p>
-      <div class="proj-transition"><i class="fa fa-chevron-down" aria-hidden="true"></i></div>
+    <div class="intro wrapper">
     </div>
-    <div class="page pictionary">
-      <div class="container">
-        <div class="img">
-          <a href="https://mjm-pictionary.herokuapp.com/" target="_blank"><img class="screen" id="pictionary-screen" src="http://i.imgur.com/zX0b8U8.png" alt="pictionary"></a>
-          <a href="https://github.com/elmeltone/pictionary" target="_blank"><img class="code" id="pictionary-code" src="http://i.imgur.com/Nbm8jJE.png" alt="pictionary"></a>
-        </div>
-        <br>
-        <div class="description">
-          <p class="text">Drawing game for multiple clients, built with Node.js and Socket.io</p>
-        </div>
-      </div>
+  </section>
+  <section>
+    <div class="archive wrapper">
     </div>
-    <div class="page chat">
-      <div class="container">
-        <div class="img">
-          <a href="https://mjm-thechat.herokuapp.com/" target="_blank"><img class="screen" id="chat-screen" src="http://i.imgur.com/9RxoEsT.png" alt="TheChat!"></a>
-          <a href="https://github.com/elmeltone/chatroom" target="_blank"><img class="code" id="chat-code" src="http://i.imgur.com/RSVmp9O.png" alt="TheChat!"></a>
-        </div>
-        <br>
-        <div class="description d2">
-          <p class="text">Simple chatroom built with Node.js and Socket.io</p>
-          <p class="text">(My mom chose the color palette)</p>
-      </div>
-      </div>
+  </section>
+  <section>
+    <div class="links wrapper">
     </div>
-    <div class="page apihack">
-      <div class="container">
-        <div class="img">
-          <a href="http://mjm-locpics.herokuapp.com/" target="_blank"><img class="screen" id="api-screen" src="http://i.imgur.com/xtqsYuv.png" alt="LOC Pics"></a>
-          <a href="https://github.com/elmeltone/apihack-v2" target="_blank"><img class="code" id="api-code" src="http://i.imgur.com/U0uCT3u.png" alt="LOC Pics"></a>
-        </div>
-        <br>
-        <div class="description d3">
-          <p class="text">Interface for searching the Library of Congress photo API via AJAX calls</p>
-      </div>
-      </div>
+  </section>
+  <section>
+    <div class="description wrapper">
     </div>
-    <div class="page shoppinglist">
-      <div class="container">
-        <div class="img">
-          <a href="http://mjm-shoppinglist1.herokuapp.com/" target="_blank"><img class="screen" id="shop-screen" src="http://i.imgur.com/7sqplVg.png" alt="Shopping List"></a>
-          <a href="https://github.com/elmeltone/mongo-shopping-list" target="_blank"><img class="code" id="shop-code" src="http://i.imgur.com/22lociX.png" alt="Shopping List"></a>
-        </div>
-        <br>
-        <div class="description d4">
-          <p class="text">Shopping list with persistence via Mongoose</p>
-          <p class="text">(This is my actual shopping list. Feel free to add and delete items, but please return it to the way it was when you found it! <i class="fa fa-smile-o" id="smile"></i>)</p>
-        </div>
-      </div>
+  </section>
+  <section>
+    <div class="mosaic wrapper">
     </div>
-    <div class="page learning">
-      <div class="container">
-        <div class="img">
-          <img id="react-screen" src="http://i.imgur.com/1lQFt1f.png" alt="React">
-        </div>
-        <br>
-        <div class="description d5">
-          <p class="learn">Currently mastering: React.js/Redux</p>
-          <p class="learn">Check my progress <a id="activity" href="https://github.com/elmeltone?tab=activity" target="_blank">here</a>.</p>
-        </div>
-      </div>
+  </section>
+  <section>
+    <div class="actions wrapper">
     </div>
   </section>
   <footer>
-    <div class="bottomline">
+    <div class="bottomline wrapper">
     </div>
   </footer>
   <script>
