--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <nav>
     <div class="masthead wrapper">
-      <h3 class="title"><span class="name">michael j melton</span> / web developer</h3>
+      <h3 class="title name">michael j melton</h3>
+      <h4 class="title position"> / web developer</h4>
       <div class="top options collaborate">Collaborate</div>
       <div class="top options quote">Get a Quote</div>
       <div class="top options explore">Explore</div>
@@ -19,6 +20,9 @@
   </nav>
   <section>
     <div class="intro wrapper">
+      <h1 class="headline">Need a web presence?</h1>
+      <h4 class="subtitle">Get it with full stack JavaScript, the language of the web.</h4>
+      <button>Learn more</button>
     </div>
   </section>
   <section>
@@ -27,6 +31,24 @@
   </section>
   <section>
     <div class="links wrapper">
+      <div class="linkbox">
+        <img class="cover photo">
+
+        </img>
+      </div>
+      <div class="linkbox">
+      </div>
+      <div class="linkbox">
+      </div>
+      <div class="linkbox">
+        <ul class="code">
+          <li><a href="https://github.com/elmeltone/chatroom">TheChat!</a></li>
+          <li><a href="https://github.com/elmeltone/dex">dex</a></li>
+          <li><a href="https://github.com/elmeltone/mjm-shopping-list">Shopping List</a></li>
+          <li><a href="https://github.com/elmeltone/pictionary">TheChat!</a></li>
+        </ul>
+      </div>
+      </div>
     </div>
   </section>
   <section>
