--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Michael J Melton - Full Stack JavaScript Web Development Portfolio</title>
   <link rel="stylesheet" href="main.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="index.js"></script>
 </head>
 <body>
   <nav>
     <div class="masthead wrapper">
-      <h3 class="title name">michael j melton</h3>
+      <h3 class="title name">MICHAEL MELTON</h3>
       <h4 class="title position"> / web developer</h4>
       <div class="top options collaborate">Collaborate</div>
       <div class="top options quote">Get a Quote</div>
@@ -41,11 +42,12 @@
       <div class="linkbox">
       </div>
       <div class="linkbox">
+        <p class="groupname code">See my code</p>
         <ul class="code">
           <li><a href="https://github.com/elmeltone/chatroom">TheChat!</a></li>
           <li><a href="https://github.com/elmeltone/dex">dex</a></li>
           <li><a href="https://github.com/elmeltone/mjm-shopping-list">Shopping List</a></li>
-          <li><a href="https://github.com/elmeltone/pictionary">TheChat!</a></li>
+          <li><a href="https://github.com/elmeltone/pictionary">pictionary</a></li>
         </ul>
       </div>
       </div>
