--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <nav>
     <div class="masthead wrapper">
-      <h3 class="title name">MICHAEL MELTON</h3>
-      <h4 class="title position"> / web developer</h4>
+      <h4 class="title name">MICHAEL MELTON</h4>
+      <h5 class="title position"> / web developer</h5>
       <div class="top options collaborate">Collaborate</div>
       <div class="top options quote">Get a Quote</div>
       <div class="top options explore">Explore</div>
@@ -22,8 +22,8 @@
   <section>
     <div class="intro wrapper">
       <h1 class="headline">Need a web presence?</h1>
-      <h4 class="subtitle">Get it with full stack JavaScript, the language of the web.</h4>
-      <button>Learn more</button>
+      <h4 class="subtitle">Get it with full stack JavaScript</h4>
+      <button class="action">Learn more</button>
     </div>
   </section>
   <section>
