Adds new logo, name, and colors to masthead

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
   <nav>
     <div class="masthead wrapper">
-      <h4 class="title name">MICHAEL MELTON</h4>
-      <h5 class="title position">/ web developer</h5>
-      <div class="top options collaborate">Collaborate</div>
-      <div class="top options quote">Get a Quote</div>
-      <div class="top options explore">Explore</div>
+      <img class="top-left logo" src="http://i.imgur.com/WNPKZwW.png" alt="MeltWebs logo">
+      <h1 class="top-left title">MeltWebs</h1>
+      <div class="top-right options collaborate">Collaborate</div>
+      <div class="top-right options quote">Get a Quote</div>
+      <div class="top-right options explore">Explore</div>
     </div>
   </nav>
   <section>
