Rearranges existing copy

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Michael J Melton - Full Stack JavaScript Web Development Portfolio</title>
+  <title>SEO & JavaScript Solutions for the Modern Web with MeltWebs</title>
+  <link rel="icon" href="http://i.imgur.com/WNPKZwW.png" />
   <link rel="stylesheet" href="main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="index.js"></script>
@@ -14,16 +15,20 @@
     <div class="masthead wrapper">
       <img class="top-left logo" src="http://i.imgur.com/WNPKZwW.png" alt="MeltWebs logo">
       <h1 class="top-left title">MeltWebs</h1>
-      <div class="top-right options collaborate">Collaborate</div>
-      <div class="top-right options quote">Get a Quote</div>
-      <div class="top-right options explore">Explore</div>
+      <div class="options-wrapper">
+        <div class="top-right options explore">ABOUT</div>
+        <div class="top-right options quote">BLOG</div>
+        <div class="top-right options collaborate">SERVICES</div>
+      </div>
     </div>
   </nav>
   <section>
     <div class="intro wrapper">
-      <h1 class="headline">Need a web presence?</h1>
-      <h4 class="subtitle">Get it with full stack JavaScript</h4>
-      <button class="action">Learn more</button>
+      <div class="shade">
+        <h1 class="headline">Need a web presence?</h1>
+        <h4 class="subtitle">Get it with full stack JavaScript</h4>
+        <button class="action">Learn more</button>
+      </div>
     </div>
   </section>
   <section>
