Changes intro section

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
   <section>
     <div class="intro wrapper">
       <div class="shade">
-        <h1 class="headline">Need a web presence?</h1>
-        <h4 class="subtitle">Get it with full stack JavaScript</h4>
-        <button class="action">Learn more</button>
+        <h1 class="headline">Need an audience?</h1>
+        <h4 class="subtitle">Get discovered with JavaScript and SEO.</h4>
+        <button class="action js">Get a website</button>
+        <button class="action seo">Get noticed</button>
       </div>
     </div>
   </section>
