Changes hover styling for links and buttons

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <img class="top-left logo" src="http://i.imgur.com/WNPKZwW.png" alt="MeltWebs logo">
       <h1 class="top-left title">MeltWebs</h1>
       <div class="options-wrapper">
-        <div class="top-right options explore">ABOUT</div>
-        <div class="top-right options quote">BLOG</div>
-        <div class="top-right options collaborate">SERVICES</div>
+        <div class="top-right options explore"><a href="">ABOUT</a></div>
+        <div class="top-right options quote"><a href="">BLOG</a></div>
+        <div class="top-right options collaborate"><a href="">SERVICES</a></div>
       </div>
     </div>
   </nav>
