Improves main copy

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SEO & JavaScript Solutions for the Modern Web with MeltWebs</title>
+  <title>JavaScript & SEO Solutions with MeltWebs</title>
   <link rel="icon" href="http://i.imgur.com/WNPKZwW.png" />
   <link rel="stylesheet" href="main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -26,7 +26,7 @@
     <div class="intro wrapper">
       <div class="shade">
         <h1 class="headline">Need an audience?</h1>
-        <h4 class="subtitle">Get discovered with JavaScript and SEO.</h4>
+        <h3 class="subtitle">Get discovered with MeltWebs development and SEO.</h3>
         <button class="action js">Get a website</button>
         <button class="action seo">Get noticed</button>
       </div>
