Adds email subscription bar

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <h1 class="top-left title">MeltWebs</h1>
       <div class="options-wrapper">
         <div class="top-right options explore"><a href="">ABOUT</a></div>
+        <div class="top-right options quote"><a href="">CONTACT</a></div>
         <div class="top-right options quote"><a href="">BLOG</a></div>
         <div class="top-right options collaborate"><a href="">SERVICES</a></div>
       </div>
@@ -33,42 +34,29 @@
     </div>
   </section>
   <section>
-    <div class="archive wrapper">
-    </div>
-  </section>
-  <section>
-    <div class="links wrapper">
-      <div class="linkbox">
-        <img class="cover photo">
-
-        </img>
-      </div>
-      <div class="linkbox">
-      </div>
-      <div class="linkbox">
-      </div>
-      <div class="linkbox">
-        <p class="groupname code">See my code</p>
-        <ul class="code">
-          <li><a href="https://github.com/elmeltone/chatroom">TheChat!</a></li>
-          <li><a href="https://github.com/elmeltone/dex">dex</a></li>
-          <li><a href="https://github.com/elmeltone/mjm-shopping-list">Shopping List</a></li>
-          <li><a href="https://github.com/elmeltone/pictionary">pictionary</a></li>
-        </ul>
-      </div>
-      </div>
-    </div>
-  </section>
-  <section>
     <div class="description wrapper">
+      <div class="subscribe wrapper">
+        <h4 class="describe subscription">Subscribe to the blog for info that affects your site traffic</h4>
+        <input class="email subscription" type="text" placeholder="email@example.com"><input class="email-submit" type="submit">
+      </div>
+      <div class="dev wrapper">
+        <h4 class="describe-title">Web development</h4>
+        <p class="describe">MeltWebs helps you create or enhance your unique website to convert your visitors to customers</p>
+        <button class="glossary js">Why JavaScript?</button>
+      </div>
+      <div class="engine wrapper">
+        <h4 class="describe-title">Search Engine Optimization</h4>
+        <p class="describe">SEO is the art of bringing more users to your site, typically through higher Google rankings. MeltWebs can help your audience find you</p>
+        <button class="glossary seo">Why is SEO important?</button>
+      </div>
     </div>
   </section>
   <section>
-    <div class="mosaic wrapper">
+    <div class="blog wrapper">
     </div>
   </section>
   <section>
-    <div class="actions wrapper">
+    <div class="examples wrapper">
     </div>
   </section>
   <footer>
