Updates home page copy

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <div class="intro wrapper">
       <div class="shade">
         <h1 class="headline">Need an audience?</h1>
-        <h3 class="subtitle">Get discovered with MeltWebs development and SEO.</h3>
-        <button class="action js">Get a website</button>
+        <h3 class="subtitle">Your fans are searching for you online.</h3>
         <button class="action seo">Get noticed</button>
       </div>
     </div>
@@ -36,12 +35,12 @@
   <section>
     <div class="description wrapper">
       <div class="subscribe wrapper">
-        <h4 class="describe subscription">Subscribe to the blog for info that affects your site traffic</h4>
+        <h4 class="describe subscription">Subscribe to the blog to reach your online potential. </h4>
         <input class="email subscription" type="text" placeholder="email@example.com"><input class="email-submit" type="submit">
       </div>
       <div class="dev wrapper">
-        <h4 class="describe-title">Web development</h4>
-        <p class="describe">MeltWebs helps you create or enhance your unique website to convert your visitors to customers</p>
+        <h4 class="describe-title">Web Development</h4>
+        <p class="describe">Get help creating or enhancing your unique website to convert your visitors to customers</p>
         <button class="glossary js">Why JavaScript?</button>
       </div>
       <div class="engine wrapper">
