Reformats masthead at 320x480

--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>JavaScript & SEO Solutions with MeltWebs</title>
+  <title>Web Development | Full Stack JavaScript | MeltWebs</title>
   <link rel="icon" href="http://i.imgur.com/WNPKZwW.png" />
   <link rel="stylesheet" href="main.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src="index.js"></script>
 </head>
 <body>
   <nav>
-    <div class="masthead wrapper">
-      <img class="top-left logo" src="http://i.imgur.com/WNPKZwW.png" alt="MeltWebs logo">
-      <h1 class="top-left title">MeltWebs</h1>
+    <div class="masthead">
+      <div class="marquee-wrapper">
+        <div class="marquee">
+          <div class="logo-wrapper">
+            <img class="logo" src="http://i.imgur.com/WNPKZwW.png" alt="MeltWebs logo">
+          </div>
+          <h1 class="title">MeltWebs</h1>
+        </div>
+      </div>
       <div class="options-wrapper">
-        <div class="top-right options explore"><a href="">ABOUT</a></div>
-        <div class="top-right options quote"><a href="">CONTACT</a></div>
-        <div class="top-right options quote"><a href="">BLOG</a></div>
-        <div class="top-right options collaborate"><a href="">SERVICES</a></div>
+        <div class="options explore"><a href="">ABOUT</a></div>
+        <div class="options quote"><a href="">CONTACT</a></div>
+        <div class="options blog"><a href="">BLOG</a></div>
+        <div class="options collaborate"><a href="">SERVICES</a></div>
       </div>
     </div>
   </nav>
@@ -35,7 +39,7 @@
   <section>
     <div class="description wrapper">
       <div class="subscribe wrapper">
-        <h4 class="describe subscription">Subscribe to the blog to reach your online potential. </h4>
+        <h4 class="describe subscription">Reach your online potential. Subcribe: </h4>
         <input class="email subscription" type="text" placeholder="email@example.com"><input class="email-submit" type="submit">
       </div>
       <div class="dev wrapper">
@@ -62,6 +66,10 @@
     <div class="bottomline wrapper">
     </div>
   </footer>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="index.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
