Replaces old logo with svg and moves marquee left

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 <body>
   <nav>
     <div class="masthead">
-      <div class="marquee-wrapper">
-        <div class="marquee">
-          <div class="logo-wrapper">
-            <img class="logo" src="http://i.imgur.com/WNPKZwW.png" alt="MeltWebs logo">
-          </div>
-          <h1 class="title">MeltWebs</h1>
+      <div class="marquee">
+        <div class="logo-wrapper">
+          <img class="logo" src="images/MeltWebs_Logo_3.0.svg" alt="MeltWebs logo">
         </div>
+        <h1 class="title">MeltWebs</h1>
       </div>
       <div class="options-wrapper">
         <div class="options explore"><a href="">ABOUT</a></div>
