--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Web Development | Full Stack JavaScript | MeltWebs</title>
-  <link rel="icon" href="http://i.imgur.com/WNPKZwW.png" />
+  <link rel="icon" href="images/MeltWebs_Logo_3.0.svg" />
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -17,13 +17,20 @@
         </div>
         <h1 class="title">MeltWebs</h1>
       </div>
-      <div class="options-wrapper">
+      <div class="nav-options">
+        <div class="line-wrapper">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
+      </div>
+    </div>
+      <div class="options-wrapper icon-unclicked">
         <div class="options explore"><a href="">ABOUT</a></div>
         <div class="options quote"><a href="">CONTACT</a></div>
         <div class="options blog"><a href="">BLOG</a></div>
         <div class="options collaborate"><a href="">SERVICES</a></div>
       </div>
-    </div>
   </nav>
   <section>
     <div class="intro wrapper">
