Changes subscription section to follow icons

--- a/index.html
+++ b/index.html
@@ -42,21 +42,34 @@
     </div>
   </section>
   <section>
-    <div class="description wrapper">
-      <div class="subscribe wrapper">
-        <h4 class="describe subscription">Reach your online potential. Subcribe: </h4>
-        <input class="email subscription" type="text" placeholder="email@example.com"><input class="email-submit" type="submit">
+    <div class="description">
+      <div class="follow-wrapper">
+        <div class="twitter-wrapper">
+          <a href="https://twitter.com/elmeltone" target="blank">
+            <h4 class="follow-text"><i class="fa fa-twitter-square"></i></h4>
+          </a>
+        </div>
+        <div class="github-wrapper">
+          <a href="https://github.com/elmeltone" target="blank">
+            <h4 class="follow-text"><i class="fa fa-github"></i></h4>
+          </a>
+        </div>
+        <div class="linkedin-wrapper">
+          <a href="https://linkedin.com/in/elmeltone" target="blank">
+            <h4 class="follow-text"><i class="fa fa-linkedin-square"></i></h4>
+          </a>
+        </div>
       </div>
-      <div class="dev wrapper">
-        <h4 class="describe-title">Web Development</h4>
-        <p class="describe">Get help creating or enhancing your unique website to convert your visitors to customers</p>
-        <button class="glossary js">Why JavaScript?</button>
-      </div>
-      <div class="engine wrapper">
-        <h4 class="describe-title">Search Engine Optimization</h4>
-        <p class="describe">SEO is the art of bringing more users to your site, typically through higher Google rankings. MeltWebs can help your audience find you</p>
-        <button class="glossary seo">Why is SEO important?</button>
-      </div>
+    </div>
+    <div class="dev wrapper">
+      <h4 class="describe-title">Web Development</h4>
+      <p class="describe">Get help creating or enhancing your unique website to convert your visitors to customers</p>
+      <button class="glossary js">Why JavaScript?</button>
+    </div>
+    <div class="engine wrapper">
+      <h4 class="describe-title">Search Engine Optimization</h4>
+      <p class="describe">SEO is the art of bringing more users to your site, typically through higher Google rankings. MeltWebs can help your audience find you</p>
+      <button class="glossary seo">Why is SEO important?</button>
     </div>
   </section>
   <section>
