Incompletely formats .description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Web Development | Full Stack JavaScript | MeltWebs</title>
+  <title>MeltWebs | Solutions for the Modern Web</title>
   <link rel="icon" href="images/MeltWebs_Logo_3.0.svg" />
   <link rel="stylesheet" href="main.css">
 </head>
@@ -33,7 +33,7 @@
       </div>
   </nav>
   <section>
-    <div class="intro wrapper">
+    <div class="intro">
       <div class="shade">
         <h1 class="headline">Need an audience?</h1>
         <h3 class="subtitle">Your fans are searching for you online.</h3>
@@ -42,28 +42,29 @@
     </div>
   </section>
   <section>
-    </div>
-    <div class="dev wrapper">
-      <h4 class="describe-title">Web Development</h4>
-      <p class="describe">Get help creating or enhancing your unique website to convert your visitors to customers</p>
-      <button class="glossary js">Why JavaScript?</button>
-    </div>
-    <div class="engine wrapper">
-      <h4 class="describe-title">Search Engine Optimization</h4>
-      <p class="describe">SEO is the art of bringing more users to your site, typically through higher Google rankings. MeltWebs can help your audience find you</p>
-      <button class="glossary seo">Why is SEO important?</button>
-    </div>
-  </section>
-  <section>
-    <div class="blog wrapper">
+    <div class="description">
+      <div class="dev-wrapper">
+        <h4 class="describe-title">Web Development</h4>
+        <p class="describe">MeltWebs is a full stack JavaScript web developer, specializing in the MERN stack (MongoDB, Express, React, and Node). Services offered include webpage creation, JavaScript and layout repair, site enhancements, and mobile interfaces for iOS and Android via React Native.</p>
+        <button class="glossary js">Why JavaScript?</button>
+      </div>
+      <div class="engine-wrapper">
+        <h4 class="describe-title">Search Engine Optimization</h4>
+        <p class="describe">SEO is the art of bringing more users to your site, typically through higher Google rankings. MeltWebs can help your audience find you</p>
+        <button class="glossary seo">Why is SEO important?</button>
+      </div>
     </div>
   </section>
   <section>
-    <div class="examples wrapper">
+    <div class="blog-wrapper">
+    </div>
+  </section>
+  <section>
+    <div class="examples-wrapper">
     </div>
   </section>
   <footer>
-    <div class="bottomline wrapper">
+    <div class="footer">
     </div>
   </footer>
 
