Formats .follow, changes hamburger on hover, fixes footer

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       </div>
       <div class="nav-options">
         <div class="line-wrapper">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
+          <div class="line dark"></div>
+          <div class="line dark"></div>
+          <div class="line dark"></div>
         </div>
       </div>
     </div>
@@ -38,6 +38,14 @@
         <h1 class="headline">Need an audience?</h1>
         <h3 class="subtitle">Your fans are searching for you online.</h3>
         <button class="action seo">Get noticed</button>
+      </div>
+    </div>
+    <div class="follow-wrapper">
+      <div class="follow">
+        <div class="follow-text">Follow the blog on social media: </div>
+        <div class="twitter"><a href="https://twitter.com/elmeltone"><i class="fa fa-twitter-square"></i></a></div>
+        <div class="github"><a href="https://github.com/elmeltone"><i class="fa fa-github-square"></i></a></div>
+        <div class="linkedin"><a href="https://linkedin.com/in/elmeltone"><i class="fa fa-linkedin-square"></i></a></div>
       </div>
     </div>
   </section>
